--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Website Sekretaris EM 2026</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>WebSekre E-MAILKOMP 2026</title>
+    <meta name="description" content="Sistem Informasi Manajemen Sekretariat E-MAILKOMP 2026" />
+    <meta name="author" content="Sekretariat E-MAILKOMP" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Website Sekretaris EM 2026" />
-    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:title" content="WebSekre E-MAILKOMP 2026" />
+    <meta property="og:description" content="Platform internal pengelolaan inventaris dan administrasi E-MAILKOMP." />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta name="twitter:title" content="WebSekre E-MAILKOMP 2026" />
+    <meta name="twitter:description" content="Platform internal pengelolaan inventaris dan administrasi E-MAILKOMP." />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
 
   <body>
