--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,17 +8,16 @@
     <meta name="description" content="Sistem Informasi Manajemen Sekretariat E-MAILKOMP 2026" />
     <meta name="author" content="Sekretariat E-MAILKOMP" />
 
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     <meta property="og:type" content="website" />
     <meta property="og:title" content="WebSekre E-MAILKOMP 2026" />
     <meta property="og:description" content="Platform internal pengelolaan inventaris dan administrasi E-MAILKOMP." />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="WebSekre E-MAILKOMP 2026" />
     <meta name="twitter:description" content="Platform internal pengelolaan inventaris dan administrasi E-MAILKOMP." />
-    <meta name="twitter:image" content="/og-image.png" />
-
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
 
   <body>
